# groundtruth

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  docker-compose.yml  install.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: 00-demo.hcl  01-saas-startup-smoke.hcl  02-edge-replica-cache.hcl  03-cron-nightly-batch.hcl  04-cms-content-integrity.hcl  05-k8s-readiness.hcl  06-ecommerce-order-pipeline.hcl  07-fintech-payments-ledger.hcl  08-multitenant-saas.hcl  09-analytics-warehouse.hcl  10-auth-security.hcl  11-job-queue-workers.hcl  12-marketplace-two-sided.hcl  13-healthcare-ehr.hcl  14-iot-telemetry-ingest.hcl  15-ecommerce-platform-full.hcl  16-fintech-ledger-compliance.hcl  17-data-platform-observability.hcl  18-postgres-sre-golden-signals.hcl  19-logistics-supply-chain.hcl  20-gaming-liveops.hcl  README.md
npm/groundtruth/: package.json
npm/groundtruth-darwin-arm64/: package.json
npm/groundtruth-darwin-x64/: package.json
npm/groundtruth-linux-arm64/: package.json
npm/groundtruth-linux-x64/: package.json
scripts/: release.sh
skills/: README.md
skills/authoring-groundtruth-checks/: SKILL.md  hcl-reference.md
src/: app.rs  athena.rs  auth.rs  config.rs  context.rs  cx.rs  eval.rs  functions.rs  heartbeat.rs  lib.rs  main.rs  mcp.rs  metrics.rs  notify.rs  report.rs  runner.rs  schedule.rs  source.rs  state.rs  validate.rs
templates/: github-workflow.yml  groundtruth.hcl
tests/: app_integration.rs  e2e.rs  matrix_postgres.rs  validation.rs
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/src/components/: Logo.astro
website/src/content/docs/docs/: alerting.md  cli.md  concepts.md  configuration.md  data-validation.md  deploy.md  http-api.md  install.md  integrating.md  introduction.md  limitations.md  mcp.md  quickstart.md  securing-and-persisting.md  writing-checks.md
website/src/pages/: index.astro
website/src/styles/: custom.css  landing.css
